boreal/tests/assets/invalid_files/compilation/unknown_variable.yar
// [error: unknown variable $b]
rule a {
    condition:
        $b
}
